# Zero-CPU

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture-roadmap.md  bio-os-runner.md  flags-register.md  instruction-encoding.md  isa.md  memory-model.md  roadmap.md  studio-bio-os-runner-refactor.md  studio-bio-os-runner.md  studio-system-panel.md  syscall-convention.md  v0.1-demo-guide.md  v0.1-release-notes.md  virtual-binary-format.md
examples/: alu_flags.zasm  alu_flags.zbin  binary_test.zbin  function_call.zasm  function_call.zbin  interrupt_basic.zasm  interrupt_basic.zbin  interrupt_ei_di.zbin  mini_kernel_syscall4_timer_read.zasm  mini_kernel_syscall5_timer_enable.zasm  mini_kernel_syscall6_timer_disable.zasm  mini_kernel_timer_lifecycle.zasm  mmio_output.zasm  mmio_output.zbin  software_interrupt.zasm  software_interrupt.zbin  timer_interrupt.zasm  timer_interrupt.zbin
examples/bio_os/: boot.zasm  kernel.zasm  user_program.zasm
include/zero_cpu/assembler/: Assembler.hpp
include/zero_cpu/binary/: BinaryFormat.hpp  BinaryProgram.hpp  BinaryReader.hpp  BinaryWriter.hpp
include/zero_cpu/core/: CPU.hpp  CPUState.hpp  ClockedDevice.hpp  Flags.hpp  InterruptController.hpp  Memory.hpp  MemoryMap.hpp  TimerDevice.hpp
include/zero_cpu/isa/: EncodedInstruction.hpp  InstructionDecoder.hpp  InstructionEncoder.hpp  Opcode.hpp
include/zero_cpu/system/: BioOSRunner.hpp
scripts/: clean_generated.bat  force_patch_bio_os_runner_module_v2.ps1  patch_studio_bio_os_runner.ps1  patch_studio_system_panel.ps1  patch_studio_uses_bio_os_runner.ps1  patch_v0_1_release_smoke_test.ps1  test_all.bat  v0_1_smoke_test.bat
src/assembler/: Assembler.cpp
src/binary/: BinaryReader.cpp  BinaryWriter.cpp
src/core/: CPU.cpp  Flags.cpp  InterruptController.cpp  Memory.cpp
src/isa/: InstructionDecoder.cpp  InstructionEncoder.cpp  Opcode.cpp
src/system/: BioOSRunner.cpp
studio/: zero_studio.cpp
tools/: zero_cli.cpp
